# PicoModular

./: CMakeLists.txt  LICENSE  README.md
PicoEnvelope/: CMakeLists.txt  PicoEnvelope-old.c  PicoEnvelope.c  i2c.pio
PicoMIDI_one_channel/: pico_midi_one_channel.py
PicoVCO_LFO_R2R/: CMakeLists.txt  PicoVCO_LFO_R2R.c  eightbit_r2r_dac_lfo_simple.pio  waves.h
PicoVCO_R2R/: CMakeLists.txt  PicoVCO_R2R.c  eightbit_r2r_dac_simple.pio
PicoVCO_R2R_Gateless/: CMakeLists.txt  PicoVCO_R2R.c  waves.c
binaries/: PicoVCO_R2R.uf2  PicoVCO_R2R_with_gate.uf2
pio-i2c-hs/: CMakeLists.txt
